# epydeck

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: build_publish.yml  tests.yml
src/epoch_deck_reader/: __init__.py
src/epydeck/: __init__.py
test/: cone.deck  test_epydeck.py  test_read.py  test_write.py
