[build-system]
requires = [
    "setuptools >= 65",
    "setuptools_scm[toml] >= 6.2",
    "wheel >= 0.29.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "epydeck"
authors = [
        {name = "Peter Hill", email = "peter.hill@york.ac.uk"},
        {name = "Joel Adams", email = "joel.adams@york.ac.uk"}
]
license = {text = "BSD"}
requires-python = ">=3.9"
dynamic = ["version"]

[project.optional-dependencies]
docs = [
     "sphinx >= 5.3",
     "sphinx_autodoc_typehints >= 1.19",
     "sphinx-book-theme >= 0.4.0rc1",
     "sphinx-argparse-cli >= 1.10.0",
     "sphinx-inline-tabs",
]
tests = [
      "pytest >= 3.3.0",
]

[tool.setuptools_scm]
write_to = "src/epydeck/_version.py"

[tool.ruff]
line-length = 88
lint.ignore = ["E501"]
